change seconds and minutes

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<span class="s2-txt4">Hours</span>
 				</div>
 
-				<!--div class="flex-col-c-m size6 bor2 m-l-10 m-r-10 m-t-15">
+				<div class="flex-col-c-m size6 bor2 m-l-10 m-r-10 m-t-15">
 					<span class="l2-txt1 p-b-9 minutes">50</span>
 					<span class="s2-txt4">Minutes</span>
 				</div>
@@ -44,7 +44,7 @@
 				<div class="flex-col-c-m size6 bor2 m-l-10 m-r-10 m-t-15">
 					<span class="l2-txt1 p-b-9 seconds">39</span>
 					<span class="s2-txt4">Seconds</span>
-				</div-->
+				</div>
 			</div>
 		</div>
 		
@@ -88,64 +88,44 @@
 	<script src="vendor/countdowntime/moment-timezone.min.js"></script>
 	<script src="vendor/countdowntime/moment-timezone-with-data.min.js"></script>
 	<script src="vendor/countdowntime/countdowntime.js"></script>
-	<script>
-		var d = new Date();
-		var currentDate = d.getDate();
-		var currentHours = d.getHours();
-		var currentMinutes = d.getMinutes();
-		var currentSeconds = d.getSeconds();
-		console.log(currentSeconds);
-		var endDate = 8;
-		var endHours = 12;
-		var endMinutes = 0;
-		var endSeconds = 0;
-		
-		var finalDate = 0;
-		var finalHours = 0;
-		var finalMinutes = 0;
-		var finalSeconds = currentSeconds;
-		
-		if((endHours - currentHours) < 0){
-			
-			finalDate = endDate - currentDate - 1;
-		} else {
-			
-			finalDate = endDate - currentDate;
-		}
-		
-		if((endMinutes - currentMinutes) < 0){
-			
-			finalHours = 24 - (currentHours - endHours) - 1;
-		} else {
-			
-			finalDate = endDate - currentDate;
-		}
-		
-		if((endSeconds - currentSeconds) < 0){
-			
-			finalMinutes = 60 - currentMinutes - 1;
-			//console.log(finalMinutes);
-			//finalSeconds = 60 - currentSeconds;
-			//console.log(finalSeconds);
-		} else {
-			
-			finalDate = endDate - currentDate;
-		}
-		finalSeconds = 60 - currentSeconds;
-		$('.cd100').countdown100({
-			/*Set Endtime here*/
-			/*Endtime must be > current time*/
-			endtimeYear: 0,
-			endtimeMonth: 0,
-			endtimeDate: finalDate,
-			endtimeHours: finalHours,
-			endtimeMinutes: 12,
-			endtimeSeconds: 52,
-			timeZone: "" 
-			// ex:  timeZone: "America/New_York"
-			//go to " http://momentjs.com/timezone/ " to get timezone
-		});
-	</script>
+<script>
+        // Set the date we're counting down to
+        var countDownDate = new Date("Jan 18, 2019 00:00:00").getTime();
+
+        // Update the count down every 1 second
+        var x = setInterval(function () {
+
+            // Get todays date and time
+            var now = new Date().getTime();
+
+            // Find the distance between now and the count down date
+            var distance = countDownDate - now;
+
+            // Time calculations for days, hours, minutes and seconds
+            var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+            var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+            var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+            var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+
+            console.log(days,hours,minutes,seconds );
+            
+            $(".days").text(days)
+            $(".hours").text(hours)
+            $(".minutes").text(minutes)
+            $(".seconds").text(seconds)
+
+            // // Output the result in an element with id="demo"
+            // document.getElementById("demo").innerHTML = days + "d " + hours + "h "
+            //     + minutes + "m " + seconds + "s ";
+
+            // If the count down is over, write some text
+            if (distance < 0) {
+                clearInterval(x);
+                document.getElementById("demo").innerHTML = "EXPIRED";
+            }
+        }, 1000);
+    </script>
 <!--===============================================================================================-->
 	<script src="vendor/tilt/tilt.jquery.min.js"></script>
 	<script >
